[package]
name = "rust_practice_cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.3"
