[package]
name = "Rust_practice_cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
grid = "0.9.0"
text-grid = "0.2.0"
simple-grid = "2.1.1"
glutin = "0.29.1"
gl = "0.14.0"
thiserror = "1.0"
image = "*"